add a cpanfile to the distribution

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,9 @@ copyright_year = 2011
 [NextRelease]
 [ReadmeFromPod]
 [ContributorsFromGit]
+[CPANFile]
+[CopyFilesFromBuild]
+copy = cpanfile
 [UploadToCPAN]
 
 [Prereqs]
