dzil: @Filter @Basic to remove GatherDir for Git::GatherDir
...as this was finding our cpanfile, and as such we may as well just switch
over to Git::GatherDir wholesale.

--- a/dist.ini
+++ b/dist.ini
@@ -6,7 +6,12 @@ copyright_holder = Robin Edwards
 copyright_year = 2011
 
 [ExtraTests]
-[@Basic]
+[Git::GatherDir]
+exclude_filename = cpanfile
+[@Filter]
+-bundle = @Basic
+-remove = GatherDir
+option = for_basic
 [PkgVersion]
 die_on_line_insertion = 0
 [PodVersion]
