--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ install:
    - git config user.name 'Travis-CI'
    - git config user.email 'travis@nowhere.dne'
 
+   # avoid dzil iff our perl < v5.10
+   - perl -e '$^V lt v5.10' && { cpanm --installdeps . && exit 0 }
+
    # Deal with all of the DZIL dependancies, quickly and quietly
    - cpanm --force --verbose Directory::Scratch
    - cpanm --quiet --notest Dist::Zilla
@@ -24,4 +27,4 @@ install:
 
 script:
    - export DZSIGN=archive
-   - dzil test --release --author
+   - if `perl -e '$^V lt v5.10'` ; then prove -lr t/` ; else dzil test --all ; fi
